public class Course {

    private String subject;

    public Course(String subject){

        this.subject = subject;

    }

    public String getSubject(){

        return subject;

    }

}
